2006-06-25  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Adele.
        
        - Added JSConstructorMake to match JSFunctionMake, along with test code.
        
        [ I checked in the ChangeLog before without the actual files. ]

        * API/JSObjectRef.cpp:
        (JSConstructorMake):
        * API/JSObjectRef.h:
        * API/testapi.c:
        (myConstructor_callAsConstructor):
        (main):
        * API/testapi.js:
        * ChangeLog:
        * JavaScriptCore.xcodeproj/project.pbxproj: Moved testapi.c to the testapi
        target -- this was an oversight in my earlier check-in.

2006-06-25  Timothy Hatcher  <timothy@apple.com>

        Reviewed by Darin.

        Bug 9574: Drosera should show inline scripts within the original HTML
        http://bugzilla.opendarwin.org/show_bug.cgi?id=9574

        Pass the starting line number and error message to the debugger.

        * kjs/debugger.cpp:
        (Debugger::sourceParsed):
        * kjs/debugger.h:
        * kjs/function.cpp:
        (KJS::GlobalFuncImp::callAsFunction):
        * kjs/function_object.cpp:
        (FunctionObjectImp::construct):
        * kjs/interpreter.cpp:
        (KJS::Interpreter::evaluate):

2006-06-24  Alexey Proskuryakov  <ap@nypop.com>

        Rubber-stamped by Eric.

        Add a -h (do not follow symlinks) option to ln in derived sources build script (without it,
        a symlink was created inside the source directory on second build).

        * JavaScriptCore.xcodeproj/project.pbxproj:

2006-06-24  David Kilzer  <ddkilzer@kilzer.net>

        Reviewed by Timothy.

        * Info.plist: Fixed copyright to include 2003-2006.

2006-06-24  Alexey Proskuryakov  <ap@nypop.com>

        Reviewed by Darin.

        - http://bugzilla.opendarwin.org/show_bug.cgi?id=9418
        WebKit will not build when Space exists in path

        * JavaScriptCore.xcodeproj/project.pbxproj: Enclose search paths in quotes; create symlinks to 