@@ -1,0 +1,228 @@
+.objc_class_name_WebScriptObject
+.objc_class_name_WebScriptObjectPrivate
+.objc_class_name_WebUndefined
+_CFStringCreateWithJSCharBuffer
+_JSBooleanMake
+_JSCharBufferCreate
+_JSCharBufferCreateUTF8
+_JSCharBufferCreateWithCFString
+_JSCharBufferGetCharacters
+_JSCharBufferGetCharactersPtr
+_JSCharBufferGetCharactersUTF8
+_JSCharBufferGetLength
+_JSCharBufferGetMaxLengthUTF8
+_JSCharBufferIsEqualUTF8
+_JSCharBufferRelease
+_JSCheckSyntax
+_JSConstructorMake
+_JSContextClearException
+_JSContextCreate
+_JSContextDestroy
+_JSContextGetException
+_JSContextGetGlobalObject
+_JSContextHasException
+_JSContextSetException
+_JSEvaluate
+_JSFunctionMake
+_JSGCCollect
+_JSGCUnprotect
+_JSNullMake
+_JSNumberMake
+_JSObjectMake
+_JSObjectSetProperty
+_JSPropertyListAdd
+_JSStringMake
+_JSUndefinedMake
+_JSValueCopyStringValue
+_JSValueGetType
+_JSValueIsEqual
+_JSValueIsObject
+_JSValueIsStrictEqual
+_JSValueIsUndefined
+_JSValueToBoolean
+_JSValueToNumber
+_JSValueToObject
+_WTFReportAssertionFailure
+__NPN_CreateObject
+__NPN_DeallocateObject
+__NPN_Evaluate
+__NPN_GetIntIdentifier
+__NPN_GetProperty
+__NPN_GetStringIdentifier
+__NPN_GetStringIdentifiers
+__NPN_IdentifierIsString
+__NPN_Invoke
+__NPN_InvokeDefault
+__NPN_ReleaseObject
+__NPN_ReleaseVariantValue
+__NPN_RemoveProperty
+__NPN_RetainObject
+__NPN_SetException
+__NPN_SetProperty
+__NPN_UTF8FromIdentifier
+__Z23_NPN_CreateScriptObjectP4_NPPPN3KJS8JSObjectEPKNS1_8Bindings10RootObjectES7_
+__Z25_NPN_CreateNoScriptObjectv
+__ZN3KJS10Identifier3addEPKNS_5UCharEi
+__ZN3KJS10Identifier3addEPKc
+__ZN3KJS10Identifier3addEPNS_7UString3RepE
+__ZN3KJS10Identifier5equalEPKNS_7UString3RepEPKc
+__ZN3KJS10throwErrorEPNS_9ExecStateENS_9ErrorTypeE
+__ZN3KJS10throwErrorEPNS_9ExecStateENS_9ErrorTypeEPKc
+__ZN3KJS11Interpreter10globalExecEv
+__ZN3KJS11Interpreter11checkSyntaxERKNS_7UStringE
+__ZN3KJS11Interpreter15restoreBuiltinsERKNS_13SavedBuiltinsE
+__ZN3KJS11Interpreter16initGlobalObjectEv
+__ZN3KJS11Interpreter16stopTimeoutCheckEv
+__ZN3KJS11Interpreter17pauseTimeoutCheckEv
+__ZN3KJS11Interpreter17startTimeoutCheckEv
+__ZN3KJS11Interpreter18resumeTimeoutCheckEv
+__ZN3KJS11Interpreter21shouldPrintExceptionsEv
+__ZN3KJS11Interpreter24setShouldPrintExceptionsEb
+__ZN3KJS11Interpreter30createLanguageInstanceForValueEPNS_9ExecStateEiPNS_8JSObjectEPKNS_8Bindings10RootObjectES8_
+__ZN3KJS11Interpreter4markEb
+__ZN3KJS11Interpreter7collectEv
+__ZN3KJS11Interpreter8evaluateERKNS_7UStringEiPKNS_5UCharEiPNS_7JSValueE
+__ZN3KJS11Interpreter8evaluateERKNS_7UStringEiS3_PNS_7JSValueE
+__ZN3KJS11InterpreterC1EPNS_8JSObjectE
+__ZN3KJS11InterpreterC1Ev
+__ZN3KJS11InterpreterC2EPNS_8JSObjectE
+__ZN3KJS11InterpreterD1Ev
+__ZN3KJS11InterpreterD2Ev
+__ZN3KJS11JSImmediate4typeEPKNS_7JSValueE
+__ZN3KJS11JSImmediate8toObjectEPKNS_7JSValueEPNS_9ExecStateE
+__ZN3KJS11JSImmediate8toStringEPKNS_7JSValueE
+__ZN3KJS11PropertyMap11getLocationERKNS_10IdentifierE
+__ZN3KJS11PropertyMap5clearEv
+__ZN3KJS11PropertyMap7restoreERKNS_15SavedPropertiesE
+__ZN3KJS11PropertyMapD1Ev
+__ZN3KJS12DateInstance4infoE
+__ZN3KJS12PropertySlot15undefinedGetterEPNS_9ExecStateEPNS_8JSObjectERKNS_10IdentifierERKS0_
+__ZN3KJS12jsNumberCellEd
+__ZN3KJS13ReferenceList6appendERKNS_9ReferenceE
+__ZN3KJS13ReferenceListC1Ev
+__ZN3KJS13ReferenceListD1Ev
+__ZN3KJS13SavedBuiltinsC1Ev
+__ZN3KJS13SavedBuiltinsD1Ev
+__ZN3KJS15SavedPropertiesC1Ev
+__ZN3KJS15SavedPropertiesD1Ev
+__ZN3KJS16RuntimeObjectImpC1EPNS_8Bindings8InstanceE
+__ZN3KJS18lengthPropertyNameE
+__ZN3KJS19InternalFunctionImp11hasInstanceEPNS_9ExecStateEPNS_7JSValueE
+__ZN3KJS19InternalFunctionImp4infoE
+__ZN3KJS19InternalFunctionImpC2EPNS_17FunctionPrototypeERKNS_10IdentifierE
+__ZN3KJS19messagePropertyNameE
+__ZN3KJS21ReferenceListIteratorppEi
+__ZN3KJS21prototypePropertyNameE
+__ZN3KJS4List6appendEPNS_7JSValueE
+__ZN3KJS4List7releaseEv
+__ZN3KJS4ListC1Ev
+__ZN3KJS6JSCell9getObjectEv
+__ZN3KJS6JSCellnwEm
+__ZN3KJS6JSLock12DropAllLocksC1Ev
+__ZN3KJS6JSLock12DropAllLocksD1Ev
+__ZN3KJS6JSLock4lockEv
+__ZN3KJS6JSLock6unlockEv
+__ZN3KJS6Lookup9findEntryEPKNS_9HashTableERKNS_10IdentifierE
+__ZN3KJS7CStringD1Ev
+__ZN3KJS7UString3Rep4nullE
+__ZN3KJS7UString3Rep7destroyEv
+__ZN3KJS7UString6appendERKS0_
+__ZN3KJS7UStringC1EPKNS_5UCharEi
+__ZN3KJS7UStringC1EPKc
+__ZN3KJS7UStringC1ERKS0_S2_
+__ZN3KJS7UStringaSEPKc
+__ZN3KJS8Bindings10RootObject14setInterpreterEPNS_11InterpreterE
+__ZN3KJS8Bindings10RootObject25removeAllNativeReferencesEv
+__ZN3KJS8Bindings10RootObject40setFindRootObjectForNativeHandleFunctionEPFPS1_PvE
+__ZN3KJS8Bindings10RootObject41_findRootObjectForNativeHandleFunctionPtrE
+__ZN3KJS8Bindings8Instance21setDidExecuteFunctionEPFvPNS_9ExecStateEPNS_8JSObjectEE
+__ZN3KJS8Bindings8Instance32createBindingForLanguageInstanceENS1_15BindingLanguageEPvPKNS0_10RootObjectE
+__ZN3KJS8Debugger12sourceUnusedEPNS_9ExecStateEi
+__ZN3KJS8Debugger6attachEPNS_11InterpreterE
+__ZN3KJS8Debugger9exceptionEPNS_9ExecStateEiiPNS_8JSObjectE
+__ZN3KJS8DebuggerC2Ev
+__ZN3KJS8DebuggerD2Ev
+__ZN3KJS8JSObject11hasInstanceEPNS_9ExecStateEPNS_7JSValueE
+__ZN3KJS8JSObject14callAsFunctionEPNS_9ExecStateEPS0_RKNS_4ListE
+__ZN3KJS8JSObject14deletePropertyEPNS_9ExecStateERKNS_10IdentifierE
+__ZN3KJS8JSObject14deletePropertyEPNS_9ExecStateEj
+__ZN3KJS8JSObject15getPropertyListEPNS_9ExecStateERNS_13ReferenceListEb
+__ZN3KJS8JSObject18getOwnPropertySlotEPNS_9ExecStateEjRNS_12PropertySlotE
+__ZN3KJS8JSObject22fillGetterPropertySlotERNS_12PropertySlotEPPNS_7JSValueE
+__ZN3KJS8JSObject3putEPNS_9ExecStateERKNS_10IdentifierEPNS_7JSValueEi
+__ZN3KJS8JSObject3putEPNS_9ExecStateEjPNS_7JSValueEi
+__ZN3KJS8JSObject4callEPNS_9ExecStateEPS0_RKNS_4ListE
+__ZN3KJS8JSObject4markEv
+__ZN3KJS8JSObject9constructEPNS_9ExecStateERKNS_4ListE
+__ZN3KJS8JSObject9constructEPNS_9ExecStateERKNS_4ListERKNS_10IdentifierERKNS_7UStringEi
+__ZN3KJS8JSObject9putDirectERKNS_10IdentifierEPNS_7JSValueEi
+__ZN3KJS8JSObject9putDirectERKNS_10IdentifierEii
+__ZN3KJS8jsStringEPKc
+__ZN3KJS8jsStringERKNS_7UStringE
+__ZN3KJS9Collector15numInterpretersEv
+__ZN3KJS9Collector19numProtectedObjectsEv
+__ZN3KJS9Collector20rootObjectTypeCountsEv
+__ZN3KJS9Collector4sizeEv
+__ZN3KJS9Collector7collectEv
+__ZN3KJS9Collector7protectEPNS_7JSValueE
+__ZN3KJS9Collector9unprotectEPNS_7JSValueE
+__ZN3KJS9ReferenceC1EPNS_8JSObjectERKNS_10IdentifierE
+__ZN3KJSeqERKNS_7UStringEPKc
+__ZN3WTF10fastCallocEmm
+__ZN3WTF10fastMallocEm
+__ZN3WTF11fastReallocEPvm
+__ZN3WTF8fastFreeEPv
+__ZNK3KJS11Interpreter12builtinArrayEv
+__ZNK3KJS11Interpreter12globalObjectEv
+__ZNK3KJS11Interpreter12saveBuiltinsERNS_13SavedBuiltinsE
+__ZNK3KJS11Interpreter15builtinFunctionEv
+__ZNK3KJS11Interpreter22builtinObjectPrototypeEv
+__ZNK3KJS11Interpreter24builtinFunctionPrototypeEv
+__ZNK3KJS11PropertyMap3getERKNS_10IdentifierE
+__ZNK3KJS11PropertyMap4saveERNS_15SavedPropertiesE
+__ZNK3KJS12DateInstance7getTimeERdRi
+__ZNK3KJS13ReferenceList3endEv
+__ZNK3KJS13ReferenceList5beginEv
+__ZNK3KJS19InternalFunctionImp14implementsCallEv
+__ZNK3KJS19InternalFunctionImp21implementsHasInstanceEv
+__ZNK3KJS21ReferenceListIteratorneERKS0_
+__ZNK3KJS21ReferenceListIteratorptEv
+__ZNK3KJS4List2atEi
+__ZNK3KJS4List8copyTailEv
+__ZNK3KJS6JSCell9getNumberERd
+__ZNK3KJS6JSCell9getNumberEv
+__ZNK3KJS6JSCell9getStringERNS_7UStringE
+__ZNK3KJS6JSCell9getStringEv
+__ZNK3KJS6JSCell9getUInt32ERj
+__ZNK3KJS7JSValue7toInt32EPNS_9ExecStateE
+__ZNK3KJS7JSValue8toUInt32EPNS_9ExecStateE
+__ZNK3KJS7JSValue9toIntegerEPNS_9ExecStateE
+__ZNK3KJS7UString10UTF8StringEv
+__ZNK3KJS7UString14toStrictUInt32EPb
+__ZNK3KJS7UString8toUInt32EPb
+__ZNK3KJS8JSObject11hasPropertyEPNS_9ExecStateERKNS_10IdentifierE
+__ZNK3KJS8JSObject12defaultValueEPNS_9ExecStateENS_6JSTypeE
+__ZNK3KJS8JSObject14implementsCallEv
+__ZNK3KJS8JSObject19implementsConstructEv
+__ZNK3KJS8JSObject21implementsHasInstanceEv
+__ZNK3KJS8JSObject3getEPNS_9ExecStateERKNS_10IdentifierE
+__ZNK3KJS8JSObject3getEPNS_9ExecStateEj
+__ZNK3KJS8JSObject4typeEv
+__ZNK3KJS8JSObject6canPutEPNS_9ExecStateERKNS_10IdentifierE
+__ZNK3KJS8JSObject8toNumberEPNS_9ExecStateE
+__ZNK3KJS8JSObject8toObjectEPNS_9ExecStateE
+__ZNK3KJS8JSObject8toStringEPNS_9ExecStateE
+__ZNK3KJS8JSObject9classInfoEv
+__ZNK3KJS8JSObject9classNameEv
+__ZNK3KJS8JSObject9toBooleanEPNS_9ExecStateE
+__ZNK3KJS9ExecState18lexicalInterpreterEv
+__ZNK3KJS9Reference15getPropertyNameEPNS_9ExecStateE
+__ZTVN3KJS19InternalFunctionImpE
+__ZTVN3KJS8JSObjectE
+_kJSObjectCallbacksNone
+_kjs_pcre_compile
+_kjs_pcre_exec
+_kjs_pcre_free
+_kjs_pcre_free_substring
+_kjs_pcre_get_substring
+_kjs_strtod
