@@ -1487,6 +1487,7 @@
 				DEBUG_INFORMATION_FORMAT = dwarf;
 				DYLIB_COMPATIBILITY_VERSION = 1;
 				DYLIB_CURRENT_VERSION = 1;
+				EXPORTED_SYMBOLS_FILE = JavaScriptCore.exp;
 				GCC_PREFIX_HEADER = JavaScriptCorePrefix.h;
 				GCC_PREPROCESSOR_DEFINITIONS = "$(DEBUG_DEFINES)";
 				HEADER_SEARCH_PATHS = (
@@ -1527,6 +1528,7 @@
 				DEBUG_INFORMATION_FORMAT = dwarf;
 				DYLIB_COMPATIBILITY_VERSION = 1;
 				DYLIB_CURRENT_VERSION = 1;
+				EXPORTED_SYMBOLS_FILE = JavaScriptCore.exp;
 				GCC_PREFIX_HEADER = JavaScriptCorePrefix.h;
 				GCC_PREPROCESSOR_DEFINITIONS = "$(DEBUG_DEFINES)";
 				HEADER_SEARCH_PATHS = (
@@ -1567,6 +1569,7 @@
 				DEBUG_INFORMATION_FORMAT = dwarf;
 				DYLIB_COMPATIBILITY_VERSION = 1;
 				DYLIB_CURRENT_VERSION = 1;
+				EXPORTED_SYMBOLS_FILE = JavaScriptCore.exp;
 				GCC_PREFIX_HEADER = JavaScriptCorePrefix.h;
 				GCC_PREPROCESSOR_DEFINITIONS = "$(DEBUG_DEFINES)";
 				HEADER_SEARCH_PATHS = (
