@@ -1,3 +1,12 @@
+2006-06-27  Timothy Hatcher  <timothy@apple.com>
+
+        Reviewed by Darin.
+
+        <rdar://problem/4406785> Add an export file to TOT JavaScriptCore like the Safari-2-0-branch
+
+        * JavaScriptCore.exp: Added.
+        * JavaScriptCore.xcodeproj/project.pbxproj:
+
 2006-06-25  Geoffrey Garen  <ggaren@apple.com>
 
         Reviewed by Adele.
